Update logo to include PUBLISHERS in accent style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="nav">
                 <a href="index.html" class="logo">
                     <span class="logo-icon">⌨</span>
-                    <span class="logo-text">UNTITLED<span class="logo-accent">.</span></span>
+                    <span class="logo-text">UNTITLED <span class="logo-accent">PUBLISHERS</span></span>
                 </a>
                 <div class="nav-links" id="navLinks">
                     <a href="about.html">About</a>
@@ -315,7 +315,7 @@
                 <div class="footer-brand">
                     <a href="index.html" class="logo">
                         <span class="logo-icon">⌨</span>
-                        <span class="logo-text">UNTITLED<span class="logo-accent">.</span></span>
+                        <span class="logo-text">UNTITLED <span class="logo-accent">PUBLISHERS</span></span>
                     </a>
                     <p>Precision-engineered stories for a new generation.</p>
                 </div>
