--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <nav class="nav">
                 <a href="index.html" class="logo">
                     <span class="logo-icon">⌨</span>
-                    <span class="logo-text">UNTITLED<span class="logo-accent">.</span></span>
+                    <span class="logo-text">UNTITLED <span class="logo-accent">PUBLISHERS</span></span>
                 </a>
                 <div class="nav-links" id="navLinks">
                     <a href="about.html">About</a>
@@ -149,7 +149,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <a href="index.html" class="logo"><span class="logo-icon">⌨</span><span class="logo-text">UNTITLED<span class="logo-accent">.</span></span></a>
+                    <a href="index.html" class="logo"><span class="logo-icon">⌨</span><span class="logo-text">UNTITLED <span class="logo-accent">PUBLISHERS</span></span></a>
                     <p>Precision-engineered stories for a new generation.</p>
                 </div>
                 <div class="footer-links"><h4>Programs</h4><ul><li><a href="submit.html">Submit Manuscript</a></li><li><a href="idea-generator.html">Idea Generator</a></li><li><a href="voice-talent.html">Voice Talent</a></li></ul></div>
