--- a/authors.html
+++ b/authors.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <a href="index.html" class="logo"><span class="logo-icon">⌨</span><span class="logo-text">UNTITLED<span class="logo-accent">.</span></span></a>
+                <a href="index.html" class="logo"><span class="logo-icon">⌨</span><span class="logo-text">UNTITLED <span class="logo-accent">PUBLISHERS</span></span></a>
                 <div class="nav-links" id="navLinks"><a href="about.html">About</a><a href="catalog.html">Catalog</a><a href="authors.html">Authors</a><a href="contact.html">Contact</a></div>
                 <a href="submit.html" class="btn btn-primary">Submit Work</a>
                 <button class="mobile-toggle" id="mobileToggle" aria-label="Toggle menu"><span></span><span></span><span></span></button>
@@ -53,7 +53,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-grid">
-                <div class="footer-brand"><a href="index.html" class="logo"><span class="logo-icon">⌨</span><span class="logo-text">UNTITLED<span class="logo-accent">.</span></span></a><p>Precision-engineered stories for a new generation.</p></div>
+                <div class="footer-brand"><a href="index.html" class="logo"><span class="logo-icon">⌨</span><span class="logo-text">UNTITLED <span class="logo-accent">PUBLISHERS</span></span></a><p>Precision-engineered stories for a new generation.</p></div>
                 <div class="footer-links"><h4>Programs</h4><ul><li><a href="submit.html">Submit Manuscript</a></li><li><a href="idea-generator.html">Idea Generator</a></li><li><a href="voice-talent.html">Voice Talent</a></li></ul></div>
                 <div class="footer-links"><h4>Company</h4><ul><li><a href="about.html">About</a></li><li><a href="authors.html">Authors</a></li><li><a href="catalog.html">Catalog</a></li><li><a href="contact.html">Contact</a></li></ul></div>
                 <div class="footer-links"><h4>Connect</h4><ul><li><a href="#">Twitter</a></li><li><a href="#">Instagram</a></li><li><a href="#">LinkedIn</a></li></ul></div>
